--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -33,3 +33,8 @@ services:
     # AppBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+    tva:
+        class: AppBundle\Twig\Extension\TvaExtension
+        tags:
+            - {name: twig.extension}
+         
